--- a/sites/all/themes/andy/css/pages.css
+++ b/sites/all/themes/andy/css/pages.css
@@ -1186,6 +1186,12 @@ margin-right: 1em;
 }
 }
 
+@media(max-width: 440px) {
+    .page-projects .view-projects .views-field-title a {
+        font-size: 3em;
+    }
+}
+
 @media(max-width: 860px) {
     .page-projects .view-projects .views-column {
         width: 95%;
