--- a/sites/all/themes/andy/css/pages.css
+++ b/sites/all/themes/andy/css/pages.css
@@ -1180,7 +1180,7 @@ margin-right: 1em;
     vertical-align: top;
 }
 
-@media(max-width: 1200px) {
+@media(min-width: 1200px) {
 .page-projects .view-projects .views-column {
     width: 45%;
 }
