--- a/sites/all/themes/andy/css/pages.css
+++ b/sites/all/themes/andy/css/pages.css
@@ -1198,7 +1198,18 @@ margin-right: 1em;
     }
 }
 
-@media(orientation: portrait), (orientation: landscape) {
+@media only screen 
+    and (min-device-width : 375px)
+    and (max-device-width : 667px)
+    and (width : 375px)
+    and (height : 559px)
+    and (orientation : portrait) 
+    and (color : 8)
+    and (device-aspect-ratio : 375/667)
+    and (aspect-ratio : 375/559)
+    and (device-pixel-ratio : 2)
+    and (-webkit-min-device-pixel-ratio : 2)
+ {
     .page-projects .view-projects .views-column {
         width: 95%;
     }
