--- a/sites/all/themes/andy/css/pages.css
+++ b/sites/all/themes/andy/css/pages.css
@@ -1198,17 +1198,9 @@ margin-right: 1em;
     }
 }
 
-@media only screen 
-    and (min-device-width : 375px)
-    and (max-device-width : 667px)
-    and (width : 375px)
-    and (height : 559px)
-    and (orientation : portrait) 
-    and (color : 8)
-    and (device-aspect-ratio : 375/667)
-    and (aspect-ratio : 375/559)
-    and (device-pixel-ratio : 2)
-    and (-webkit-min-device-pixel-ratio : 2)
+@media only screen and (device-pixel-ratio : 2)
+    and (-webkit-min-device-pixel-ratio : 2) and (orientation: portrait), screen and (device-pixel-ratio : 2)
+    and (-webkit-min-device-pixel-ratio : 2) and (orientation: landscape)
  {
     .page-projects .view-projects .views-column {
         width: 95%;
