Adding some bottom padding to perhaps allow for the function

--- a/sites/all/themes/andy/css/pages.css
+++ b/sites/all/themes/andy/css/pages.css
@@ -1223,3 +1223,7 @@ margin-right: 1em;
 .typed-cursor {
     display: none;
 }
+
+.page-projects .view-projects .views-row-last {
+    margin-bottom: 200px;
+}
