--- a/sites/all/themes/andy/css/pages.css
+++ b/sites/all/themes/andy/css/pages.css
@@ -1212,6 +1212,9 @@ margin-right: 1em;
     .page-projects .view-projects .views-column {
         width: 95%;
     }
+    .page-projects .view-projects .views-column-last .views-row-last {
+    margin-bottom: 300px;
+}
 }
 .project-banner {
     background-color: #AEAEAE;
@@ -1222,8 +1225,4 @@ margin-right: 1em;
 /* Figure out how to remove without need to use CSS */
 .typed-cursor {
     display: none;
-}
-
-.page-projects .view-projects .views-row-last {
-    margin-bottom: 200px;
 }
