--- a/sites/all/themes/andy/css/pages.css
+++ b/sites/all/themes/andy/css/pages.css
@@ -1215,11 +1215,9 @@ margin-right: 1em;
     .page-projects .view-projects .views-column-last .views-row-last {
     margin-bottom: 300px;
 }
+.page-projects .view-projects .views-field-title a {
+    font-size: 6em;
 }
-.project-banner {
-    background-color: #AEAEAE;
-    padding-top: 1em;
-    padding-bottom: 1em;
 }
 
 /* Figure out how to remove without need to use CSS */
