--- a/sites/all/themes/andy/css/pages.css
+++ b/sites/all/themes/andy/css/pages.css
@@ -1216,7 +1216,7 @@ margin-right: 1em;
     margin-bottom: 300px;
 }
 .page-projects .view-projects .views-field-title a {
-    font-size: 6em;
+    font-size: 6em !important;
 }
 }
 
