--- a/sites/all/themes/andy/css/pages.css
+++ b/sites/all/themes/andy/css/pages.css
@@ -478,6 +478,12 @@ Less than 700px breakpoint
 
 }
 
+@media(max-width: 900px) {
+.page-eform-submit-contact-form #content .section #page-title {
+        margin-left: 0px;
+}
+}
+
 @media(orientation: portrait) {
 
     .node-type-resume dt {
@@ -704,7 +710,7 @@ div.messages {
 #edit-parameter-days-settings-help-token {
     display: none;
 }
-@media(min-width: 900px) {
+@media(min-width: 901px) {
     #mm-icon-button {
         display: none;
     }
@@ -1214,6 +1220,13 @@ margin-right: 1em;
     }
 .page-projects .view-projects .views-field-title a {
     font-size: 6em !important;
+}
+p {
+        font-size: 1.3em;
+}
+
+input, textarea {
+    font-size: 1.3em;
 }
 }
 
