--- a/sites/all/themes/andy/css/pages.css
+++ b/sites/all/themes/andy/css/pages.css
@@ -544,9 +544,6 @@ Less than 700px breakpoint
     width: 75%;
     }
 }
-@media(min-width:961px) and (orientation: portrait){
- width: 95%;   
-}
 .node-type-resume dd {
     margin-right: 10%;
 }
@@ -1070,7 +1067,7 @@ input[type="submit"]:hover, input[type="reset"]:hover, input[type="button"]:hove
 
 }
 
-@media(min-width: 810px) {
+@media(min-width: 901px) {
     .page-projects .view-projects .view-header {
     margin-left: 250px;
 }
@@ -1224,8 +1221,11 @@ margin-right: 1em;
 p {
         font-size: 1.3em;
 }
+#contentbody {
+    width: 95%;
+}
 
-input, textarea {
+input, textarea, .entitytype-contact_form-form p {
     font-size: 1.3em;
 }
 }
@@ -1233,4 +1233,10 @@ input, textarea {
 /* Figure out how to remove without need to use CSS */
 .typed-cursor {
     display: none;
+}
+
+@media(max-width: 900px) {
+    #contentbody {
+        width: 95%;
+    }
 }
