--- a/sites/all/themes/andy/css/pages.css
+++ b/sites/all/themes/andy/css/pages.css
@@ -1225,7 +1225,7 @@ and (-webkit-device-pixel-ratio : 3)
         width: 95%;
     }
 
-    input, textarea, .entitytype-contact_form-form p {
+    .entitytype-contact_form-form input, .entitytype-contact_form-form textarea, .entitytype-contact_form-form p {
         font-size: 1.3em;
     }
         .sidebar-first #content .section {
